--- a/public/css/input.css
+++ b/public/css/input.css
@@ -101,3 +101,36 @@ form {
 .submitBtn:hover {
   background-color: #faa341;
 }
+audio {
+  width: 100rem;
+}
+
+.timeline {
+  background-color: #2e2e2e;
+  width: 100%;
+  height: 0.5rem;
+  position: relative;
+  cursor: pointer;
+  border-radius: 0.2rem;
+  overflow: hidden;
+}
+.progress {
+  background: #f79526;
+  width: 20%;
+  height: 100%;
+  transition: 0.1s;
+  z-index: 10;
+}
+
+.audio-player {
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-bottom: 2rem;
+  height: 3rem;
+  background-color: #1f1f1f;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.226);
+}
